hphp/hack/test/typecheck/variadic_args12.php
<?hh // partial

function f(&...$args): void {}
